--- a/index.html
+++ b/index.html
@@ -38,6 +38,58 @@
   .email-item:hover {
     background: #f0f0f0;
   }
+
+  h2 {
+  font-size: 22px;
+  margin-bottom: 15px;
+}
+
+button {
+  background: #c2e7ff;
+  border: none;
+  padding: 15px 25px;
+  border-radius: 20px;
+  font-size: 14px;
+  cursor: pointer;
+  margin-bottom: 15px;
+  width: 100%;
+}
+
+button:hover {
+  background: #a8d5f5;
+}
+
+ul {
+  list-style: none;
+}
+
+ul li {
+  padding: 8px 10px;
+  border-radius: 0 20px 20px 0;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+ul li:hover {
+  background: #e2e8f0;
+}
+
+input[type="text"] {
+  width: 100%;
+  padding: 10px 15px;
+  border: 1px solid #ddd;
+  border-radius: 25px;
+  font-size: 14px;
+  margin-bottom: 10px;
+  background: #f0f0f0;
+  outline: none;
+}
+
+.email-item {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
 </style>
 
 
