--- a/index.html
+++ b/index.html
@@ -163,12 +163,12 @@
 
     <!-- SIDEBAR -->
     <div class="sidebar">
-      <button class="compose-btn">✏️ Compose</button>
-      <div class="nav-item active">📥 Inbox</div>
-      <div class="nav-item">⭐ Starred</div>
-      <div class="nav-item">📤 Sent</div>
-      <div class="nav-item">📝 Drafts</div>
-      <div class="nav-item">🗑️ Trash</div>
+      <button class="compose-btn">Compose</button>
+<div class="nav-item active">Inbox</div>
+<div class="nav-item">Starred</div>
+<div class="nav-item">Sent</div>
+<div class="nav-item">Drafts</div>
+<div class="nav-item">Trash</div>
     </div>
 
     <!-- EMAIL LIST -->
@@ -182,32 +182,32 @@
       <div class="email-row unread">
         <input type="checkbox">
         <span class="star">☆</span>
-        <span class="sender">John Doe</span>
+        <span class="sender">Name</span>
         <div class="email-content">
-          <span class="subject">Hello there! </span>
-          <span class="preview">— Hey how are you doing today...</span>
+          <span class="subject">Subject </span>
+          <span class="preview">— preview text here...</span>
         </div>
         <span class="time">10:42 AM</span>
       </div>
-
+      
       <div class="email-row unread">
         <input type="checkbox">
         <span class="star">☆</span>
-        <span class="sender">Jane Smith</span>
+        <span class="sender">Name</span>
         <div class="email-content">
-          <span class="subject">Meeting tomorrow </span>
-          <span class="preview">— Just a reminder about our 9am...</span>
+          <span class="subject">Subject </span>
+          <span class="preview">— preview text here...</span>
         </div>
         <span class="time">9:15 AM</span>
       </div>
-
+      
       <div class="email-row">
         <input type="checkbox">
-        <span class="star starred">★</span>
-        <span class="sender">GitHub</span>
+        <span class="star">☆</span>
+        <span class="sender">Name</span>
         <div class="email-content">
-          <span class="subject">Your push was successful </span>
-          <span class="preview">— Great work, your code is live...</span>
+          <span class="subject">Subject </span>
+          <span class="preview">— preview text here...</span>
         </div>
         <span class="time">Yesterday</span>
       </div>
