--- a/index.html
+++ b/index.html
@@ -231,22 +231,22 @@
   <script>
     const emails = [
       {
-        sender: "Name",
-        subject: "Subject",
+        sender: "Name1",
+        subject: "Subject1",
         time: "10:42 AM",
         body: "This is the full email body text. When you connect your Java backend this will be real email content."
       },
       {
-        sender: "Name",
-        subject: "Subject",
+        sender: "Name2",
+        subject: "Subject2",
         time: "9:15 AM",
-        body: "This is another email body. Lorem ipsum dolor sit amet consectetur."
+        body: "This is another email body. These are placeholders for now."
       },
       {
-        sender: "Name",
-        subject: "Subject",
+        sender: "Name3",
+        subject: "Subject3",
         time: "Yesterday",
-        body: "This is the third email body. More content will go here."
+        body: "This is the third emasil body. More content will go here."
       }
     ];
 
